# iron-lo

./: .gitignore  CLAUDE.md  README.md  config.py  install.sh  mcp_server.py  perplexity.md  pyproject.toml  pyrightconfig.json  redfish.py  requirements.txt  serial_console.py
docs/superpowers/plans/: 2026-03-13-fhrdm01-ilo-mcp.md
docs/superpowers/specs/: 2026-03-13-fhrdm01-ilo-mcp-design.md
tests/: test_config.py  test_mcp_tools.py  test_redfish.py  test_serial_console.py
