[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iron-lo"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "asyncssh>=2.14.0",
]

[tool.setuptools]
py-modules = ["mcp_server", "config", "redfish", "serial_console"]

[project.optional-dependencies]
dev = [
    "respx>=0.21.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

